# blockswap

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bootstrap.sh  docker-compose.yml  master.md  phase1.md  phase2.md  phase3.md
cli/: go.mod
docs/: API.md  ARCHITECTURE.md  ATOMIC_SWAPS.md  CONSENSUS.md  CROSS_CHAIN.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DESIGN_SUMMARY.md  DEVELOPMENT.md  NODE_SETUP.md  SECURITY.md  TOKENOMICS.md  WHITEPAPER.md
explorer/: README.md
node/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.dev.toml  config.mainnet.toml  config.testnet.toml  config.toml
node/benches/: consensus.rs  performance.rs
node/src/: config.rs  lib.rs  main.rs
node/src/blockchain/: block.rs  chain.rs  mod.rs  state.rs  transaction.rs
node/src/consensus/: bft.rs  bsc.rs  mod.rs  proposer.rs  validator.rs
node/src/crosschain/: mod.rs
node/src/crypto/: mod.rs
node/src/mempool/: mempool.rs  mod.rs  prioritization.rs
node/src/network/: gossip.rs  mod.rs  p2p.rs  sync.rs
node/src/rpc/: handlers.rs  mod.rs  server.rs
node/src/storage/: mod.rs
node/src/swap/: mod.rs
node/src/utils/: logger.rs  mod.rs  serialization.rs  time.rs
node/src/vm/: evm.rs  mod.rs  wasm_runtime.rs
node/tests/: consensus_test.rs  integration_test.rs  network_test.rs
relayer/: README.md
scripts/: README.md  backup.sh  build-all.sh  clean.sh  deploy-mainnet.sh  deploy-testnet.sh  deploy-validator.sh  export-diagrams-docker.sh  export-diagrams.sh  genesis-generator.sh  monitor.sh  restore.sh  (+4 more)
(+25 files in other folders)
